update to migrate next version

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,15 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Satisfy:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing Script:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
+  <section class="main-content">
+  </section>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
